# unisub

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  EMBY_TMDB_MISMATCH.md  PROGRESS.md  README.md  STANDARDS.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  unisub-backend.service
backend/app/: STANDARDS.md  config.py  main.py
backend/app/core/: __init__.py  auth.py  clouddrive_client.py  clouddrive_pb2.py  clouddrive_pb2_grpc.py  database.py  http_client.py  logger.py
backend/app/models/: __init__.py  activity_log.py  cd2_config.py  emby_blacklist.py  emby_cache.py  platform_config.py  subscription.py  tmdb_cache.py
backend/app/references/: nextfind-api-v2.md  nextfind-api-v3.md  nextfind-api.md
backend/app/routers/: __init__.py  auto_subscribe.py  cd2.py  dashboard.py  emby.py  forward.py  logs.py  platforms.py  search.py  subscriptions.py  tasks.py
backend/app/schemas/: __init__.py  auto_subscribe.py  cd2.py  dashboard.py  emby.py  emby_cache.py  forward.py  platform.py  search.py  subscription.py
backend/app/services/: __init__.py  auth_config.py  cd2_config.py  clouddrive2.py  dashboard.py  emby.py  emby_db.py  emby_scan.py  forward.py  moviepilot.py  nextfind.py  nextfind_admin.py  orchestrator.py  platform.py  scheduler.py  subscription.py  tmdb.py  tmdb_cache_migration.py
backend/app/services/auto_subscribe/: __init__.py  base.py  config_store.py  douban.py  maoyan.py  mikan.py  models.py  pipeline.py  service.py
deploy/: README.md  unisub-backend.service  unisub-nginx.conf
docs/: architecture-flow.html
frontend/: .prettierrc  Dockerfile  SOYBEAN_REFERENCE.md  STANDARDS.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
(+107 files in other folders)
