[project]
name = "unisub-backend"
version = "0.1.0"
description = "UniSub backend — 统一媒体订阅聚合器"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "alembic",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
