[project]
name = "unisub-backend"
version = "0.1.0"
description = "UniSub backend — 统一媒体订阅聚合器"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "alembic",
    "grpcio>=1.76.0",
    "protobuf>=6.31.1",
    "pyjwt",
    "python-multipart>=0.0.32",
    "croniter>=6.2.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["app/core/clouddrive_pb2*.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes — bug detection
    "I",   # isort — import sorting
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "UP",  # pyupgrade — modern Python idioms
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E712",  # SQLAlchemy WHERE 需要 == True 生成正确 SQL
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
